# radiolab2026-Cal

./: LAB1_Code.ipynb  LAB2_code.ipynb  LAB2_code_other.ipynb  LAB3_code.ipynb  LAB_1_RTFM.ipynb  Lab1.ipynb  Lab2 Code.ipynb  Lab2.ipynb  Lab2Testing.ipynb  Lab2_MoreCode.ipynb  PACKAGE_SETUP.md  README.md  RF Functions UGASTRO 26.ipynb  Rafpy_Function_Testing.ipynb  Rosendo Medina-Uribe_LAB1.ipynb  baseline_subtracted.npz  bighorntest3.npz  colldata1.py  corrected_spectrum.npz  massden_demo.ipynb  my_corrected_spectrum.npz  my_hI_line.npz  nps_survey_documentation.txt  nps_survey_v4.py  plotting.ipynb  pyproject.toml  shared_state.py  takedata.py  takedata2.py  takedatalab2.py  test_1.5MHz_300kHz.npz  test_1MHz_350kHz.npz  test_1MHz_450kHz.npz  test_1MHz_500kHz.npz  test_1MHz_50kHz.npz  tracksun1.py  velocity_corrected.npz  writefile.py
.ipynb_checkpoints/: LAB_1_RTFM-checkpoint.ipynb
DSB_DATA/: fir_300_285_0.npz  fir_300_285_1.npz  fir_300_285_2.npz  fir_300_315_0.npz  fir_300_315_1.npz  fir_300_315_2.npz
Lab 2/: Lab2Testing.ipynb  bandpassdata_1.npz  data_taking_lab2.py  lab1package.py
Lab 3/: README.md  colldata.py  tracksun-update.py  tracksun.py
NPS Survey/: nps_analysis.ipynb  nps_heatmap.py  plotting.ipynb
Noise_DATA/: noise_bpf.npz  noisedata1.npz  noisedata_real.npz
Old DataSets/: Thu Feb 12 23-05-19 2026.npz  bandpassdata_1.npz  bighorn test2.npz  bighorntest2.npz  timebighorntest3.npz
SSB_DATA/: ssb_27MHZ_CH1_0.npz  ssb_27MHZ_CH1_1.npz  ssb_27MHZ_CH1_2.npz  ssb_27MHZ_CH2_0.npz  ssb_27MHZ_CH2_1.npz  ssb_27MHZ_CH2_2.npz
lab 3 true/: colldata1.py  (+3 more)
(+62 files in other folders)
